# autonav_software_2025

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  runDockerImage.sh  server.js
.devcontainer/: Dockerfile  devcontainer.json  packages.repos  sourceAndBuild.sh
.github/workflows/: compile_run.yml
autonav_ws/autonav_performance_node/src/: performance.py
autonav_ws/src/autonav_commander/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_display_node/: package.xml
autonav_ws/src/autonav_display_node/display_node/src/: display.py
autonav_ws/src/autonav_display_node/src/: display.py  topics_and_nodes.py
autonav_ws/src/autonav_example_cpp/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_example_cpp/src/: example.cpp
autonav_ws/src/autonav_example_py/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_example_py/src/: example.py
autonav_ws/src/autonav_feelers/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_feelers/src/: fake_vision_node.py  feeler.cpp  feeler.py  feeler_node.cpp  pid.cpp  vision_test.py  vision_test_2.py  vision_test_3.py
autonav_ws/src/autonav_filters/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_hardware/: CMakeLists.txt  can_docs.txt  package.xml
autonav_ws/src/autonav_hardware/src/: audible_feedback.py  audible_feedback_node.py  camera_node.py  can_node.py  can_receiver.py  can_transmitter.py  neos_over_can.py  playback3.py  player.py  player2.py  simple_audible_feedback_publisher.py  soundsphere.py  sparkmax_cli.py  sparkmax_node.py  test_can_converter.py  threadexa.py  vectornav_node.cpp
autonav_ws/src/autonav_hardware/src/swerve/: can_spark_max.py  rev_messages.py  sparks.csv  swerve_config.py  swerve_drive.py  swerve_module.py
autonav_ws/src/autonav_hardware/src/swerve_drive/: can_spark_max.py  swerve_config.py  swerve_drive.py  swerve_module.py
autonav_ws/src/autonav_launch/: package.xml
autonav_ws/src/autonav_logging/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_logging/autonav_logging/: topic_pub.py
autonav_ws/src/autonav_logging/src/: autonav_logging.py  logging.py  playback.py  tester.py
autonav_ws/src/autonav_manual/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_manual/src/: controller_input.py  controller_listener.py  manual_24.py  manual_25.py  motormessage_listener.py
autonav_ws/src/autonav_msgs/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_msgs/msg/: AngularPIDStatistics.msg  AudibleFeedback.msg  CanStats.msg  Command.msg  Conbus.msg  ConfigurationBroadcast.msg  ControllerInput.msg  DeviceState.msg  GPSFeedback.msg  HardwarePerformance.msg  IMUData.msg  LinearPIDStatistics.msg  Log.msg  MotorFeedback.msg  MotorInput.msg  MotorStatisticsBackMotors.msg  NUCStatistics.msg  Particle.msg  ParticleFilterDebug.msg  Performance.msg  Position.msg  SafetyLights.msg  SwerveAbsoluteFeedback.msg  SwerveFeedback.msg  SystemState.msg  Ultrasonic.msg  WaypointReached.msg  ZeroEncoders.msg
autonav_ws/src/autonav_msgs/srv/: SetDeviceState.srv  SetSystemState.srv
autonav_ws/src/autonav_odometry/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_odometry/src/: main.py  particlefilter.py
autonav_ws/src/autonav_performance_node/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_performance_node/src/: performance.py
autonav_ws/src/autonav_playback/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonav_ws/src/autonav_playback/autonav_playback/: CombinedView.py  dev_vid.py  playback.py  testTopicsSpam.py  tester.py  topic_pub.py
autonav_ws/src/autonav_playback/src/: playback.py
autonav_ws/src/autonav_sd_display/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_shared/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_test/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_test/src/: gps_test.py  test_nodes.py  waypoints_editor.py
autonav_ws/src/autonav_vision/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_vision/src/: Transformations.py  Transformer.py  combination.py  main.py  transformations.cpp  transformations.py  vision_test_logger.py
autonav_ws/src/example_cpp/: CMakeLists.txt  package.xml
autonav_ws/src/example_cpp/src/: main.cpp
autonav_ws/src/example_py/: CMakeLists.txt  package.xml
autonav_ws/src/self_drive/: CMakeLists.txt  package.xml
autonav_ws/src/self_drive/src/: self_drive_overwatch.py  self_drive_path_planner.py
autonav_ws/src/xb_manual_pkg/: CMakeLists.txt  package.xml
autonav_ws/src/xb_manual_pkg/src/: controller_input.py  manual_24.py  manual_25.py  motormessage_listener.py
autonav_ws/src/zemlin_display/: CMakeLists.txt  package.xml
autonav_ws/src/zemlin_display/src/: backend.py  standalone.py
autonav_ws/src/zemlin_filters/: CMakeLists.txt  package.xml
autonav_ws/src/zemlin_navigation/: CMakeLists.txt  package.xml
autonav_ws/src/zemlin_vision/: CMakeLists.txt  package.xml
data/: waypoints.csv  waypoints_bak.csv
display/: index.html
display/scripts/: connectingNotification.js  exampleWebsocketServer.js  globals.js  logging.js  main(original).js  main.js  pageNavigator.js  tabs.js  topicConfig.js  utilities.js
display/styles/: index.css  notification.css
firmware/: SafetyLights.ino  TEMP.ino  Ultrasonic.ino  sketch_may25a_copy_20250525162550.ino
firmware/IGVC2025MotorManager/: platformio.ini
firmware/IGVC2025MotorManager/src/: Config.h  main.cpp
firmware/MAXMOTOR/: AbsoluteEncoder.h  CANSparkMax.h  Config.h  MAXMOTOR.ino  QuadratureEncoder.h  SUSwerveModule.h  common.h
firmware/MINMOTOR/: MINMOTOR.ino  common.h  motor_with_encoder.h  swerve_drive.h  time.h
firmware/MINMOTOR/SUSwerve/: AbsoluteEncoder.h  CanSparkMax.h  SUSwerveDrive.h  SUSwerveModule.h
sd_display/: next.config.ts  package-lock.json  package.json
sd_display/src/app/: globals.css  layout.tsx  page.tsx
sd_display/src/components/: ClientSide.tsx  IdleScreen.tsx  SwerveModule.tsx  camera-view-popup.tsx  dashboard-sidebar.tsx
setup/: setup.sh  vnav.sh
setup/etc/: autonav.rules  autonav.service  autonav_service.sh
standalone_scripts/: cursor_feelers.py
(+62 files in other folders)
