<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_feelers</name>
  <version>2025.0.1</version>
  <description>Package to take all of the obstacle and GPS data and output commands to move the robot to avoid obstacles and hit GPS waypoints using SCR FEELERS (C) TM.</description>
  <maintainer email="is.a.squrril@gmail.com">Daniel Brown</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>autonav_msgs</depend>
  <depend>autonav_shared</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_depend>rosidl_default_generators</build_depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
