<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_logging</name>
  <version>2025.0.1</version>
  <description>The fastest damn Logger in the West</description>
  <maintainer email="ghair244@gmail.com">Garrison</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>autonav_msgs</exec_depend>
  <exec_depend>autonav_shared</exec_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


  <build_depend>rosidl_default_generators</build_depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
