<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_manual</name>
  <version>2025.0.1</version>
  <description>Contains nodes for reading, using, and debugging controller input</description>
  <maintainer email="antonioc@email.here">tony</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>autonav_msgs</depend>
  <depend>autonav_shared</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>evdev</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>