<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autonav_odometry</name>
    <version>0.1.0</version>
    <description>Thingies to track the robot's position</description>
    <maintainer email="dorukayhan@gmail.com">Doruk Ayhan</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>autonav_shared</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>