<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_performance_node</name>
  <version>0.0.0</version>
  <description>How much deditated wam for a mincwaft server</description>
  <maintainer email="ghair244@gmail.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>autonav_shared</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
