<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autonav_test</name>
    <version>2025.0.1</version>
    <description>Example Python</description>
    <maintainer email="is.a.squrril@gmail.com">Daniel Brown</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>autonav_shared</depend>
    <depend>autonav_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>