<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>zemlin_display</name>
    <version>2025.0.1</version>
    <description>Zemlin Display Backend</description>
    <maintainer email="dylan.zemlin@gmail.com">Dylan Zemlin</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>autonav_shared</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>